--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
     "@types/node": "^6.0.45",
     "concurrently": "^3.0.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.3"
+    "typescript": "^2.0.3",
+    "gulp": "^3.9.0",
+    "gulp-typescript": "^2.8.0",
+    "gulp-tslint": "^3.6.0",
+    "tsconfig-glob": "^0.3.3",
+    "gulp-sourcemaps": "^1.6.0"
+
   }
 }
