--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
     "concurrently": "^3.0.0",
-    "lite-server": "^2.2.2",
-    "typescript": "^2.0.3",
     "gulp": "^3.9.0",
-    "gulp-typescript": "^2.8.0",
-    "gulp-tslint": "^3.6.0",
-    "tsconfig-glob": "^0.3.3",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-sass": "^2.0.4",
+    "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.2.1",
-    "gulp-concat": "^2.6.0"
-
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-tsfmt": "^1.0.2",
+    "gulp-tslint": "^3.6.0",
+    "gulp-typescript": "^2.8.0",
+    "lite-server": "^2.2.2",
+    "tsconfig-glob": "^0.3.3",
+    "typescript": "^2.0.3"
   }
 }
